# HEAT_calculator

./: .gitignore  .pre-commit-config.yaml  README.md  compare_with_atct.py  data.py  expand_network.py  pyproject.toml  species.py  utils.py
.github/workflows/: ruff.yml
HEAT_calculator/: __init__.py  data.py  io.py  species.py  utils.py
examples/: compare_with_atct.py  expand_network.py  inertia_tensor.py
